unpackaged/main/default/objects/Premium_Code_Request__c/Premium_Code_Request__c.object-meta.xml
<CustomObject>
    <label>Demo Premium Code Request</label>
    <nameField>
        <displayFormat>PCR-{0000000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Premium Code Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>