unpackaged/main/default/objects/Premium_Code_Request__c/fields/Cost_center__c.field-meta.xml
<CustomField>
    <fullName>Cost_center__c</fullName>
    <inlineHelpText>‘Other’ is default. Please specify your Business Unit below.</inlineHelpText>
    <label>Cost center</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>