unpackaged/main/default/objects/Premium_Code_Request__c/fields/Request_description__c.field-meta.xml
<CustomField>
    <fullName>Request_description__c</fullName>
    <label>Request description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>