unpackaged/main/default/objects/Premium_Code_Request__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <description>This is the name of the person filing the request</description>
    <inlineHelpText>Enter the name of the requester if not the person who is actually entering the request.</inlineHelpText>
    <label>Requester</label>
    <length>255</length>
    <type>Text</type>
</CustomField>