unpackaged/main/default/objects/Premium_Code_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Request status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Approval requested</fullName>
            </value>
            <value>
                <fullName>Approved - in processing</fullName>
            </value>
            <value>
                <fullName>Approved - processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>